# mapterhorn

./: CHANGELOG.md  LICENSE  README.md
.github/workflows/: gh-pages.yml  source-aggregate-downsample.yml
attribution/: index.html
docs/: index.html
examples/hillshade/: index.html
pipelines/: .gitignore  README.md  aggregation_copy.py  aggregation_covering.py  aggregation_merge.py  aggregation_reproject.py  aggregation_run.py  aggregation_tile.py  attribution.py  bundle.py  debug.sh  download_urls.py  downsampling_covering.py  downsampling_run.py  index.html  pyproject.toml  remove_dangling_pmtiles.py  source_bounds.py  source_download.py  source_set_nodata.py  utils.py
source-catalog/: README.md
source-catalog/at10/: file_list.txt  metadata.json
source-catalog/atburgenland/: file_list.txt  metadata.json
source-catalog/atkaernten/: file_list.txt  metadata.json
source-catalog/atoberoesterreich/: file_list.txt  metadata.json
source-catalog/atsalzburg/: file_list.txt  metadata.json
source-catalog/beflanders/: file_list.txt  metadata.json
source-catalog/debug-glo30/: file_list.txt  metadata.json
source-catalog/debug-swissalti3d/: file_list.txt  metadata.json
source-catalog/glo30/: file_list.csv  file_list.txt  metadata.json
source-catalog/glo30-polar/: file_list.txt  metadata.json
source-catalog/swissalti3d/: metadata.json
viewer/: index.html
web-mercator-pipeline/: .gitignore  reproject.py  update_covering.py  update_source_store.py  utils.py
website/: CNAME  index.html  style.css
website/attribution/: index.html
(+8 files in other folders)
